Fix login overlay always being visible

--- a/src/assets/styles/layout/login/_login.scss
+++ b/src/assets/styles/layout/login/_login.scss
@@ -114,7 +114,7 @@
         visibility: hidden;
     }
 
-    > .login_inner {
+    &.is-active > .login_inner {
         left: 50%;
         opacity: 1;
         top: 50%;
